# spacy-tokenizer

./: README.md  pyproject.toml
spacy_tokenizer/: __init__.py  __main__.py  spacy_tokenizer.py
tests/: test_script.py  test_spacy_tokenizer.py
